proto/y.output
Terminaux inutilisés dans la grammaire

   T_CONST
   T_COPEN
   T_CCLOSE


État 33 conflits: 4 réduction/réduction
État 34 conflits: 4 réduction/réduction
État 47 conflits: 4 réduction/réduction


Grammaire

    0 $accept: start $end

    1 start: T_MAIN T_POPEN T_PCLOSE BLOC

    2 BLOC: T_AOPEN BODY T_ACLOSE

    3 BODY: %empty
    4     | CMD
    5     | CMD T_SEP BODY

    6 CMD: declare_assignement
    7    | declaration
    8    | assignement
    9    | PRINT

   10 OP: T_ADD
   11   | T_SUB
   12   | T_MUL
   13   | T_DIV

   14 EXPR: T_NAME
   15     | T_POPEN EXPR T_PCLOSE
   16     | T_INT

   17 @1: %empty

   18 EXPR: EXPR @1 OP EXPR
   19     | T_SUB EXPR
   20     | T_ADD EXPR

   21 PRINT: T_PRINTF T_POPEN EXPR T_PCLOSE

   22 T_NAMELIST: T_NAME
   23           | T_NAME T_COMMA T_NAMELIST

   24 declare_assignement: T_VAR T_NAME T_EQ EXPR

   25 declaration: T_VAR T_NAMELIST

   26 assignement: T_NAME T_EQ EXPR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
T_MAIN (258) 1
T_PRINTF (259) 21
T_CONST (260)
T_VAR (261) 24 25
T_ADD (262) 10 20
T_SUB (263) 11 19
T_MUL (264) 12
T_DIV (265) 13
T_EQ (266) 24 26
T_POPEN (267) 1 15 21
T_PCLOSE (268) 1 15 21
T_AOPEN (269) 2
T_ACLOSE (270) 2
T_COPEN (271)
T_CCLOSE (272)
T_INT (273) 16
T_NAME (274) 14 22 23 24 26
T_SEP (275) 5
T_COMMA (276) 23


Non-terminaux, suivis des règles où ils apparaissent

$accept (22)
    à gauche: 0
start (23)
    à gauche: 1, à droite: 0
BLOC (24)
    à gauche: 2, à droite: 1
BODY (25)
    à gauche: 3 4 5, à droite: 2 5
CMD (26)
    à gauche: 6 7 8 9, à droite: 4 5
OP (27)
    à gauche: 10 11 12 13, à droite: 18
EXPR (28)
    à gauche: 14 15 16 18 19 20, à droite: 15 18 19 20 21 24 26
@1 (29)
    à gauche: 17, à droite: 18
PRINT (30)
    à gauche: 21, à droite: 9
T_NAMELIST (31)
    à gauche: 22 23, à droite: 23 25
declare_assignement (32)
    à gauche: 24, à droite: 6
declaration (33)
    à gauche: 25, à droite: 7
assignement (34)
    à gauche: 26, à droite: 8


État 0

    0 $accept: . start $end

    T_MAIN  décalage et aller à l'état 1

    start  aller à l'état 2


État 1

    1 start: T_MAIN . T_POPEN T_PCLOSE BLOC

    T_POPEN  décalage et aller à l'état 3


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


État 3

    1 start: T_MAIN T_POPEN . T_PCLOSE BLOC

    T_PCLOSE  décalage et aller à l'état 5


État 4

    0 $accept: start $end .

    $défaut  accepter


État 5

    1 start: T_MAIN T_POPEN T_PCLOSE . BLOC

    T_AOPEN  décalage et aller à l'état 6

    BLOC  aller à l'état 7


État 6

    2 BLOC: T_AOPEN . BODY T_ACLOSE

    T_PRINTF  décalage et aller à l'état 8
    T_VAR     décalage et aller à l'état 9
    T_NAME    décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (BODY)

    BODY                 aller à l'état 11
    CMD                  aller à l'état 12
    PRINT                aller à l'état 13
    declare_assignement  aller à l'état 14
    declaration          aller à l'état 15
    assignement          aller à l'état 16


État 7

    1 start: T_MAIN T_POPEN T_PCLOSE BLOC .

    $défaut  réduction par utilisation de la règle 1 (start)


État 8

   21 PRINT: T_PRINTF . T_POPEN EXPR T_PCLOSE

    T_POPEN  décalage et aller à l'état 17


État 9

   24 declare_assignement: T_VAR . T_NAME T_EQ EXPR
   25 declaration: T_VAR . T_NAMELIST

    T_NAME  décalage et aller à l'état 18

    T_NAMELIST  aller à l'état 19


État 10

   26 assignement: T_NAME . T_EQ EXPR

    T_EQ  décalage et aller à l'état 20


État 11

    2 BLOC: T_AOPEN BODY . T_ACLOSE

    T_ACLOSE  décalage et aller à l'état 21


État 12

    4 BODY: CMD .
    5     | CMD . T_SEP BODY

    T_SEP  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 4 (BODY)


État 13

    9 CMD: PRINT .

    $défaut  réduction par utilisation de la règle 9 (CMD)


État 14

    6 CMD: declare_assignement .

    $défaut  réduction par utilisation de la règle 6 (CMD)


État 15

    7 CMD: declaration .

    $défaut  réduction par utilisation de la règle 7 (CMD)


État 16

    8 CMD: assignement .

    $défaut  réduction par utilisation de la règle 8 (CMD)


État 17

   21 PRINT: T_PRINTF T_POPEN . EXPR T_PCLOSE

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 28


État 18

   22 T_NAMELIST: T_NAME .
   23           | T_NAME . T_COMMA T_NAMELIST
   24 declare_assignement: T_VAR T_NAME . T_EQ EXPR

    T_EQ     décalage et aller à l'état 29
    T_COMMA  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 22 (T_NAMELIST)


État 19

   25 declaration: T_VAR T_NAMELIST .

    $défaut  réduction par utilisation de la règle 25 (declaration)


État 20

   26 assignement: T_NAME T_EQ . EXPR

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 31


État 21

    2 BLOC: T_AOPEN BODY T_ACLOSE .

    $défaut  réduction par utilisation de la règle 2 (BLOC)


État 22

    5 BODY: CMD T_SEP . BODY

    T_PRINTF  décalage et aller à l'état 8
    T_VAR     décalage et aller à l'état 9
    T_NAME    décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (BODY)

    BODY                 aller à l'état 32
    CMD                  aller à l'état 12
    PRINT                aller à l'état 13
    declare_assignement  aller à l'état 14
    declaration          aller à l'état 15
    assignement          aller à l'état 16


État 23

   20 EXPR: T_ADD . EXPR

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 33


État 24

   19 EXPR: T_SUB . EXPR

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 34


État 25

   15 EXPR: T_POPEN . EXPR T_PCLOSE

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 35


État 26

   16 EXPR: T_INT .

    $défaut  réduction par utilisation de la règle 16 (EXPR)


État 27

   14 EXPR: T_NAME .

    $défaut  réduction par utilisation de la règle 14 (EXPR)


État 28

   18 EXPR: EXPR . @1 OP EXPR
   21 PRINT: T_PRINTF T_POPEN EXPR . T_PCLOSE

    T_PCLOSE  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 29

   24 declare_assignement: T_VAR T_NAME T_EQ . EXPR

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 38


État 30

   23 T_NAMELIST: T_NAME T_COMMA . T_NAMELIST

    T_NAME  décalage et aller à l'état 39

    T_NAMELIST  aller à l'état 40


État 31

   18 EXPR: EXPR . @1 OP EXPR
   26 assignement: T_NAME T_EQ EXPR .

    T_ACLOSE  réduction par utilisation de la règle 26 (assignement)
    T_SEP     réduction par utilisation de la règle 26 (assignement)
    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 32

    5 BODY: CMD T_SEP BODY .

    $défaut  réduction par utilisation de la règle 5 (BODY)


État 33

   18 EXPR: EXPR . @1 OP EXPR
   20     | T_ADD EXPR .

    T_ADD     réduction par utilisation de la règle 17 (@1)
    T_ADD     [réduction par utilisation de la règle 20 (EXPR)]
    T_SUB     réduction par utilisation de la règle 17 (@1)
    T_SUB     [réduction par utilisation de la règle 20 (EXPR)]
    T_MUL     réduction par utilisation de la règle 17 (@1)
    T_MUL     [réduction par utilisation de la règle 20 (EXPR)]
    T_DIV     réduction par utilisation de la règle 17 (@1)
    T_DIV     [réduction par utilisation de la règle 20 (EXPR)]
    T_PCLOSE  réduction par utilisation de la règle 20 (EXPR)
    T_ACLOSE  réduction par utilisation de la règle 20 (EXPR)
    T_SEP     réduction par utilisation de la règle 20 (EXPR)
    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 34

   18 EXPR: EXPR . @1 OP EXPR
   19     | T_SUB EXPR .

    T_ADD     réduction par utilisation de la règle 17 (@1)
    T_ADD     [réduction par utilisation de la règle 19 (EXPR)]
    T_SUB     réduction par utilisation de la règle 17 (@1)
    T_SUB     [réduction par utilisation de la règle 19 (EXPR)]
    T_MUL     réduction par utilisation de la règle 17 (@1)
    T_MUL     [réduction par utilisation de la règle 19 (EXPR)]
    T_DIV     réduction par utilisation de la règle 17 (@1)
    T_DIV     [réduction par utilisation de la règle 19 (EXPR)]
    T_PCLOSE  réduction par utilisation de la règle 19 (EXPR)
    T_ACLOSE  réduction par utilisation de la règle 19 (EXPR)
    T_SEP     réduction par utilisation de la règle 19 (EXPR)
    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 35

   15 EXPR: T_POPEN EXPR . T_PCLOSE
   18     | EXPR . @1 OP EXPR

    T_PCLOSE  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 36

   21 PRINT: T_PRINTF T_POPEN EXPR T_PCLOSE .

    $défaut  réduction par utilisation de la règle 21 (PRINT)


État 37

   18 EXPR: EXPR @1 . OP EXPR

    T_ADD  décalage et aller à l'état 42
    T_SUB  décalage et aller à l'état 43
    T_MUL  décalage et aller à l'état 44
    T_DIV  décalage et aller à l'état 45

    OP  aller à l'état 46


État 38

   18 EXPR: EXPR . @1 OP EXPR
   24 declare_assignement: T_VAR T_NAME T_EQ EXPR .

    T_ACLOSE  réduction par utilisation de la règle 24 (declare_assignement)
    T_SEP     réduction par utilisation de la règle 24 (declare_assignement)
    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37


État 39

   22 T_NAMELIST: T_NAME .
   23           | T_NAME . T_COMMA T_NAMELIST

    T_COMMA  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 22 (T_NAMELIST)


État 40

   23 T_NAMELIST: T_NAME T_COMMA T_NAMELIST .

    $défaut  réduction par utilisation de la règle 23 (T_NAMELIST)


État 41

   15 EXPR: T_POPEN EXPR T_PCLOSE .

    $défaut  réduction par utilisation de la règle 15 (EXPR)


État 42

   10 OP: T_ADD .

    $défaut  réduction par utilisation de la règle 10 (OP)


État 43

   11 OP: T_SUB .

    $défaut  réduction par utilisation de la règle 11 (OP)


État 44

   12 OP: T_MUL .

    $défaut  réduction par utilisation de la règle 12 (OP)


État 45

   13 OP: T_DIV .

    $défaut  réduction par utilisation de la règle 13 (OP)


État 46

   18 EXPR: EXPR @1 OP . EXPR

    T_ADD    décalage et aller à l'état 23
    T_SUB    décalage et aller à l'état 24
    T_POPEN  décalage et aller à l'état 25
    T_INT    décalage et aller à l'état 26
    T_NAME   décalage et aller à l'état 27

    EXPR  aller à l'état 47


État 47

   18 EXPR: EXPR . @1 OP EXPR
   18     | EXPR @1 OP EXPR .

    T_ADD     réduction par utilisation de la règle 17 (@1)
    T_ADD     [réduction par utilisation de la règle 18 (EXPR)]
    T_SUB     réduction par utilisation de la règle 17 (@1)
    T_SUB     [réduction par utilisation de la règle 18 (EXPR)]
    T_MUL     réduction par utilisation de la règle 17 (@1)
    T_MUL     [réduction par utilisation de la règle 18 (EXPR)]
    T_DIV     réduction par utilisation de la règle 17 (@1)
    T_DIV     [réduction par utilisation de la règle 18 (EXPR)]
    T_PCLOSE  réduction par utilisation de la règle 18 (EXPR)
    T_ACLOSE  réduction par utilisation de la règle 18 (EXPR)
    T_SEP     réduction par utilisation de la règle 18 (EXPR)
    $défaut  réduction par utilisation de la règle 17 (@1)

    @1  aller à l'état 37
